--- a/jetcache/pom.xml
+++ b/jetcache/pom.xml
@@ -8,7 +8,7 @@
         <version>2.2.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.lzc</groupId>
+    <groupId>com.com.lzc</groupId>
     <artifactId>jetcache</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>jetcache</name>
