--- a/spikeordermq/src/main/resources/application.properties
+++ b/spikeordermq/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 #\u6570\u636E\u5E93\u94FE\u63A5\u6C60\u914D\u7F6E
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql:///normaltest?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql:///normaltest?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.druid.filters= stat
@@ -37,6 +37,7 @@ spring.rabbitmq.host=192.168.204.3
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+spring.rabbitmq.connection-timeout=2000
 #\u6D88\u606F\u53D1\u9001\u786E\u8BA4\u56DE\u8C03
 spring.rabbitmq.publisher-confirm-type=correlated
 #spring.rabbitmq.publisher-confirms=true
