--- a/app-utils/src/main/resources/application.properties
+++ b/app-utils/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.thymeleaf.cache=false
-
 server.port=8080
+spring.application.name=app-utils
+
+#\u65E5\u5FD7\u7BA1\u7406
+logging.config=classpath:logback-boot.xml
+
